# kwin4_effect_nocontentmove

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc  metadata.json  nocontentmove.cc  nocontentmove.h
